--- a/src/components/colorPicker/index.css
+++ b/src/components/colorPicker/index.css
@@ -20,6 +20,7 @@
     height: 280px;
     transition: background-color 0.3s ease-in-out;
     position: relative;
+    background-color:"black";
 }
 
 .canvas p {
@@ -30,6 +31,7 @@
     background: rgba(255, 255, 255, 0.6);
     left: 35%;
     font-style: italic;
+    background-color:"black";
 }
 
 .color-box {
